testing width values to fix overflow

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ p.section-desc {
 .chart,
 .text-box {
   background: white;
-  padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
 }
@@ -71,7 +70,7 @@ p.section-desc {
 }
 
 .chart > div {
-  width: 100%;
+  width: 80%;
 }
 
 #map {
